Fixes `Cuic.innerHeight()` for window Fixes `Cuic.innerWidth()` for window Fixes `Cuic.outerHeight()` for window Fixes `Cuic.outerWidth()` for window Re-aligns panel when window is resized Re-aligns notification when window is resized

--- a/docs/css/cuic-0.3.0-dev.css
+++ b/docs/css/cuic-0.3.0-dev.css
@@ -347,7 +347,7 @@ body > .notification {
   line-height: 1.5rem;
 }
 .notification.closable .notification-content {
-  margin-right: 20px;
+  margin-right: 25px;
 }
 .notification .btn-close {
   color: rgba(255, 255, 255, 0.5);
